--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@react-native-community/slider": "^4.5.2",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
+    "@splicer97/react-native-switch": "^1.0.0",
     "expo": "~50.0.14",
     "expo-dev-client": "~3.3.11",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-audio-recorder-player": "^3.6.7",
+    "react-native-gesture-handler": "^2.16.0",
     "react-native-permissions": "^4.1.5",
     "react-native-reanimated": "^3.8.1",
     "react-native-safe-area-context": "^4.9.0",
